# typstlab

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DESIGN.md  NEW_ARCH.md  TESTING.md  clippy.toml
.cargo/: config.toml
crates/typstlab/: Cargo.toml
crates/typstlab-app/: Cargo.toml
crates/typstlab-app/src/: lib.rs
crates/typstlab-app/src/actions/: bootstrap.rs  build.rs  create.rs  discovery.rs  download_docs.rs  gen_paper.rs  gen_template.rs  load.rs  mod.rs  resolve_docs.rs  resolve_typst.rs  status.rs  toolchain_resolve.rs
crates/typstlab-app/src/models/: build_artifact.rs  build_artifact_scope.rs  docs.rs  mod.rs  paper.rs  paper_scope.rs  project.rs  store.rs  store_docs.rs  store_typst.rs  template.rs  template_scope.rs  typst.rs
crates/typstlab-base/: Cargo.toml
crates/typstlab-base/src/: driver.rs  lib.rs  path.rs  persistence.rs  platform.rs  project_docs.rs  version_resolver.rs
crates/typstlab-base/src/docs_parser/: body.rs  error.rs  html.rs  mod.rs  render.rs  route.rs  schema.json  schema.rs  sink.rs
crates/typstlab-base/src/docs_parser/html/: ast.rs  entities.rs  error.rs  markdown.rs  mod.rs  parser.rs  render.rs
crates/typstlab-base/src/docs_parser/md/: ast.rs  mod.rs  render.rs
crates/typstlab-base/src/install/: docs.rs  mod.rs  typst.rs
crates/typstlab-base/src/link_resolver/: docs.rs  mod.rs  typst.rs
crates/typstlab-base/src/version_resolver_jsons/: type_docs.json  typst.json  typst_version_schema.json  typstyle.json
crates/typstlab-cli/: Cargo.toml
crates/typstlab-cli/src/: main.rs  root_speaker.rs
crates/typstlab-cli/src/commands/: build.rs  gen_paper.rs  gen_template.rs  mcp.rs  mod.rs  new.rs  status.rs
crates/typstlab-cli/src/utils/: mod.rs
crates/typstlab-core/: Cargo.toml
crates/typstlab-core/builtin_layouts/default/: header.typ  meta.tmp.typ  refs.tmp.typ
crates/typstlab-core/builtin_layouts/minimal/: meta.tmp.typ  refs.tmp.typ
crates/typstlab-core/builtin_templates/default/: main.tmp.typ  template.typ
crates/typstlab-core/examples/: counter_child.rs  counter_child_locked.rs  lock_holder.rs
crates/typstlab-core/src/: context.rs  error.rs  lib.rs
crates/typstlab-core/src/config/: consts.rs  mod.rs  model.rs
crates/typstlab-core/src/lock/: acquire.rs  error.rs  guard.rs  mod.rs  tests.rs
crates/typstlab-core/src/paper/: create.rs  mod.rs  model.rs
crates/typstlab-core/src/path/: mod.rs
crates/typstlab-core/src/project/: builtin_layouts.rs  builtin_templates.rs  create.rs  generate.rs  layout.rs  mod.rs  template.rs
crates/typstlab-core/src/state/: mod.rs
crates/typstlab-core/src/status/: engine.rs  mod.rs  schema.rs
crates/typstlab-core/src/status/checks/: build.rs  env.rs  mod.rs  refs.rs  typst.rs
crates/typstlab-core/src/template/: engine.rs  error.rs  mod.rs
crates/typstlab-core/src/template/engine/: blocks.rs  helpers.rs  mod.rs  tokenize.rs
crates/typstlab-core/tests/: lock_process_tests.rs  project_detection_tests.rs  state_tests.rs  status_integration_test.rs
crates/typstlab-lsp/typstlab-lsp-macros/: Cargo.toml
crates/typstlab-lsp/typstlab-lsp-macros/src/: close.rs  close_cfg.rs  feature.rs  feature_cfg.rs  lib.rs  utils.rs
crates/typstlab-lsp/typstlab-lsp-macros/tests/: close_test.rs  feature_test.rs
crates/typstlab-mcp/: Cargo.toml
crates/typstlab-mcp-2/: Cargo.toml
crates/typstlab-mcp-2/src/: lib.rs  utils.rs
crates/typstlab-mcp-2/src/tools/: build_and_render.rs  status.rs
crates/typstlab-mcp/src/: context.rs  errors.rs  lib.rs  server.rs
crates/typstlab-mcp/src/handlers/: cmd.rs  mod.rs
crates/typstlab-mcp/src/handlers/common/: mod.rs  ops.rs  path.rs  types.rs
crates/typstlab-mcp/src/handlers/docs/: browse.rs  get.rs  mod.rs  search.rs  tests.rs  types.rs
crates/typstlab-mcp/src/handlers/rules/: browse.rs  get.rs  list.rs  mod.rs  search.rs  tests.rs  types.rs
crates/typstlab-mcp/src/tools/: build_and_render.rs  docs.rs  mod.rs  rules.rs  status.rs
crates/typstlab-mcp/tests/: browse_schema.rs  cancellation.rs  cmd_build_and_render_test.rs  cmd_validation.rs  concurrent_search.rs  error_codes.rs  error_codes_strict.rs  get_pagination.rs  mcp_api_behavior.rs  mcp_cancellation.rs  mcp_e2e_compatibility.rs  mcp_error_codes.rs  mcp_limits_behavior.rs  mcp_resource_uris.rs  mcp_schema_consistency.rs  mcp_security_rules.rs  ops_mapper.rs  resource_security.rs  schema_validation.rs  search_pagination.rs  search_schema.rs  security_symlink.rs  tool_listing.rs
crates/typstlab-typst/: Cargo.toml  README.md
crates/typstlab-typst/examples/: basic_usage.rs  error_handling.rs
crates/typstlab-typst/src/: exec.rs  info.rs  lib.rs  resolve.rs
crates/typstlab-typst/src/docs/: download.rs  download_json.rs  extract.rs  generate.rs  html_to_md.rs  html_to_mdast.rs  links.rs  mod.rs  render_bodies.rs  render_func.rs  schema.rs
crates/typstlab-typst/src/docs/generate/: entry.rs  frontmatter.rs  mod.rs  route.rs
crates/typstlab-typst/src/github/: client.rs  download.rs  mod.rs  url.rs
crates/typstlab-typst/src/install/: download.rs  mod.rs  platform.rs  release.rs  select.rs
crates/typstlab-typst/tests/: docs_integration_tests.rs  docs_locking_tests.rs  docs_module_tests.rs  github_module_tests.rs  html_to_mdast_integration.rs  install_locking_tests.rs  integration_test.rs  performance_benchmark.rs
crates/typstlab/src/: cli.rs  context.rs  main.rs  output.rs
crates/typstlab/src/commands/: build.rs  doctor.rs  generate.rs  lsp.rs  mcp.rs  mod.rs  new.rs  paper.rs  setup.rs  status.rs  sync.rs
crates/typstlab/tests/: build_test.rs  cli_tests.rs  docs_tests.rs  doctor_tests.rs  gen_test.rs  mcp_tests.rs  new_test.rs  status_test.rs  sync_test.rs  typst_exec_tests.rs  typst_install_tests.rs  typst_link_tests.rs  typst_version_tests.rs  typst_versions_tests.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
crates/xtask/src/commands/: check_docs_schema.rs  json_check.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs
xtask/src/commands/: mod.rs  tree_sitter.rs  tree_sitter_verify.rs
xtask/tests/: cli_tests.rs
(+184 files in other folders)
