[workspace]
members = [
  "crates/typstlab",
  "crates/typstlab-core",
  "crates/typstlab-proto",
  "crates/typstlab-base",
  "crates/typstlab-app",
  "crates/typstlab-cli",
  "crates/typstlab-mcp-2",
  "crates/typstlab-testkit",

  "crates/typstlab-typst",
  "e2e",
]
resolver = "2"

[workspace.dependencies]
rmcp = { version = "0.14.0", features = [
  "server",
  "macros",
  "transport-io",
  "schemars",
] }
rmcp-macros = "0.14.0"
tree-sitter = "0.26.3"
