[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
xshell = "0.2.7"
anyhow = "1.0"
log = "0.4.29"
env_logger = "0.11.8"
tempfile = "3.24.0"
typstlab-core = { path = "../crates/typstlab-core" }

[dev-dependencies]
assert_fs = "1.1.3"
escargot = "0.5.15"
predicates = "3.1.3"
temp-env = "0.3.6"
typstlab-testkit = { path = "../crates/typstlab-testkit" }
