[package]
name = "typstlab-app"
version = "0.1.0"
edition = "2024"

[dependencies]
typstlab-proto = { path = "../typstlab-proto" }
typstlab-base = { path = "../typstlab-base" }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
colored = "3"
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
tar = "0.4"
xz2 = "0.1"
