[package]
name = "typstlab-base"
version = "0.1.0"
edition = "2024"

[dependencies]
typstlab-proto = { path = "../typstlab-proto" }
anyhow = "1"
semver = "1"
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
tempfile = "3"
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1"
tar = "0.4"
zip = "2"
thiserror = "2"
xz2 = "0.1"
