[package]
name = "typstlab-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
typstlab-proto = { path = "../typstlab-proto" }
typstlab-base = { path = "../typstlab-base" }
typstlab-app = { path = "../typstlab-app" }
anyhow = "1"
thiserror = "2"
dirs = "5"
clap = { version = "4", features = ["derive"] }
colored = "3"
