[package]
name = "typstlab-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
schemars = "1.2"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# File system
walkdir = "2"
tempfile = "3"
fs2 = "0.4"

[dev-dependencies]
# Testing
typstlab-testkit = { path = "../typstlab-testkit" }
