[package]
name = "typstlab-mcp-2"
version = "0.1.0"
edition = "2024"

[dependencies]
typstlab-proto = { path = "../typstlab-proto" }
typstlab-base = { path = "../typstlab-base" }
typstlab-app = { path = "../typstlab-app" }
anyhow = "1"
serde_json = "1"
rmcp = { version = "1", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dirs = "6.0.0"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.27.0"
