[package]
name = "typstlab-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.2", features = ["chrono04"] }

# Core dependencies
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
typstlab-core = { path = "../typstlab-core" }

# RMCP - Official Rust MCP SDK (for future integration)
rmcp = { version = "0.8", features = ["server"] }
rmcp-macros = "0.8"
anyhow = "1.0.100"

[dev-dependencies]
tempfile = "3"
typstlab-testkit = { path = "../typstlab-testkit" }
