[package]
name = "typstlab-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Core dependencies
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
typstlab-core = { path = "../typstlab-core" }
typstlab-typst = { path = "../typstlab-typst" }

# RMCP - Official Rust MCP SDK
rmcp = { workspace = true, features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
    "time",
    "fs",
    "sync",
] }
anyhow = "1.0.100"
futures-util = "0.3"
tracing = "0.1.44"
tokio-util = { version = "0.7.18", features = ["rt"] }
semver = "1"
base64 = "0.22"


[dev-dependencies]
tempfile = "3"
typstlab-testkit = { path = "../typstlab-testkit" }
