[package]
name = "typstlab-typst"
version = "0.1.0"
edition = "2024"

[dependencies]
typstlab-core = { path = "../typstlab-core" }
which = "6.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
semver = "1.0.27"

[dev-dependencies]
tempfile = "3.24.0"
