[package]
name = "typstlab-typst"
version = "0.1.0"
edition = "2024"

[dependencies]
typstlab-core = { path = "../typstlab-core" }
which = "6.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
semver = "1.0.27"
url = { version = "2.5", features = ["serde"] }

# HTTP client for GitHub API (blocking, no async)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

# Archive extraction
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
zip = "2.2"
walkdir = "2.5"

# SHA256 verification
sha2 = "0.10"

# Temporary files (moved from dev-dependencies for atomic installation)
tempfile = "3.24.0"

# HTML parsing for docs.json conversion
html5ever = "0.27"
markup5ever = "0.12"
markup5ever_rcdom = "0.3"

# Markdown AST for HTML→Markdown conversion
markdown = "1.0.0-alpha.24"
mdast_util_to_markdown = "0.0.2"

# YAML frontmatter generation
serde_yaml = "0.9"

# HTTP mocking for test_helpers (needed for integration tests to access test_helpers)
mockito = "1.5"

[dev-dependencies]
# Test utilities
typstlab-testkit = { path = "../typstlab-testkit" }
