[package]
name = "typstlab"
version = "0.1.0"
edition = "2024"

[dependencies]
typstlab-core = { path = "../typstlab-core" }
typstlab-typst = { path = "../typstlab-typst" }
typstlab-mcp = { path = "../typstlab-mcp" }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["blocking"] }
tar = "0.4"
flate2 = "1"
colored = "2"
url = { version = "2.5", features = ["serde"] }
dirs = "5"
semver = "1.0"
which = "6.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
rayon = "1.11.0"

[dev-dependencies]
# Testing
typstlab-testkit = { path = "../typstlab-testkit" }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serde_json = "1"
mockito = "1.5"
rmcp = { version = "0.14", features = ["client", "transport-child-process"] }
