[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
jsonschema = { version = "0.46", default-features = false }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
