[package]
name = "typstlab-lsp-macros"
version = "0.1.0"
edition = "2024"
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.106"
proc-macro-crate = "3.4.0"

[dev-dependencies]
typstlab-lsp-core = { path = "../typstlab-lsp-core" }
